eatery link fix

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<p>An interactive restaurant website built using HTML, CSS, and Javascript. This allows for future restaurateurs to show their culture, display their menu, and manage reservations and online orders.  
 									</p>
 									<ul class="actions special">
-										<li><a href="https://bnhos.github.io/Eatery" class="button">Check it out!</a></li>
+										<li><a href="https://bnhos.github.io/eatery/" class="button">Check it out!</a></li>
 									</ul>
 								</article>
 								</article>
