--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html lang="en">
 <!--
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
@@ -7,7 +8,7 @@
 <html>
 	<head>
 		<title>Brandon Nguyen-Ho</title>
-		<meta charset="utf-8" />
+		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -82,7 +83,19 @@
 									<p>An interactive restaurant website built using HTML, CSS, and Javascript. This allows for future restaurateurs to show their culture, display their menu, and manage reservations and online orders.  
 									</p>
 									<ul class="actions special">
-										<li><a href="https://bnhos.github.io/eatery/" class="button">Check it out!</a></li>
+										<li><a href="https://bnhos.github.io/eatery" class="button">Check it out!</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Project 3:<br/>
+										Eyeglass Store Management</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<p>Eyeglass store management system using Python and MySQL Database. A system that can be used by both businesses and customers.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/bnhos/eyeglass-store-management/tree/main" class="button">Check it out!</a></li>
 									</ul>
 								</article>
 								</article>
