--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
 				<!-- Posts -->
-				<<article class="post featured">
+				<article class="post featured">
 					<header class="major">
 						<h2><br />
 						CONTACT</a></h2>
